# EMS-ESP-Flasher

./: .gitignore  README.md  icon.icns  partitions_esp32_16MB.csv  partitions_esp32_32MB.csv  partitions_esp32_4MB.csv  partitions_esp32_8MB.csv  partitions_loader_4MB.csv  pyproject.toml  requirements.txt
.github/workflows/: build.yml
emsesp_flasher/: __main__.py  common.py  const.py  gui.py  helpers.py  own_esptool.py
esp_flasher/: __main__.py  common.py  const.py  gui.py  helpers.py  own_esptool.py
